--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,14 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  --ifm-navbar-item-padding-horizontal: 0.75rem;
+  --ifm-navbar-item-padding-vertical: 0.25rem;
+
+  --ifm-navbar-height: 65px;
+  --ifm-color-emphasis-200: #fff;
+
+  --menu-background-color: #F5F5F7;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,4 +35,77 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  --menu-background-color: #3b3b3b;
+}
+
+
+.navbar__items.navbar__items--left,
+.navbar__items.navbar__items--right {
+  flex: unset;
+}
+
+.navbar__items.navbar__items--left,
+.navbar__items.navbar__items--right {
+  background: var(--menu-background-color);
+  border-radius: 16px;
+  padding: 4px;
+  gap: 4px;
+  align-items: unset;
+}
+
+.navbar__items.navbar__items--right .navbar__item {
+  background: var(--ifm-color-emphasis-200);
+}
+
+.navbar__item {
+  transition: .2s ease-in-out;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 996px) {
+  .navbar__item {
+    display: none;
+  }
+}
+
+.navbar__toggle {
+  display: none;
+  width: 40px;
+}
+
+@media (max-width: 996px) {
+  .navbar__toggle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+  }
+}
+
+.navbar__items .navbar__colorModeToggle {
+  padding: 0;
+  width: auto;
+  height: auto;
+}
+
+.navbar__items .navbar__colorModeToggle button {
+  width: 40px;
+  height: 40px;
+  border-radius: 12px;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar__items .navbar__link--active {
+  background: var(--ifm-color-emphasis-200);
+  color: inherit;
+}
+
+.navbar__item:hover {
+  background: var(--ifm-color-emphasis-200);
 }
