--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,6 +23,7 @@
   --ifm-color-emphasis-200: #fff;
 
   --menu-background-color: #F5F5F7;
+  --ifm-menu-color-background-active: #F5F5F7;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -39,6 +40,11 @@
   --menu-background-color: #3b3b3b;
 }
 
+/* TODO: move navbar styles to separated file */
+.navbar {
+  box-shadow: none;
+  border-bottom: 1px solid var(--menu-background-color);
+}
 
 .navbar__items.navbar__items--left,
 .navbar__items.navbar__items--right {
@@ -108,4 +114,13 @@
 
 .navbar__item:hover {
   background: var(--ifm-color-emphasis-200);
+}
+
+.menu__link {
+  padding: 10px 16px;
+  border-radius: 16px;
+}
+
+.docSidebarContainer_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-styles-module {
+  border-right: 1px solid var(--menu-background-color)!important;
 }
