styles: for mobile toggler + remove sun static icon

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -80,6 +80,10 @@
 .navbar__toggle {
   display: none;
   width: 40px;
+  height: 40px;
+  transition: .3s ease-in-out;
+  border-radius: 12px;
+  background: var(--ifm-color-emphasis-200);
 }
 
 @media (max-width: 996px) {
